# plora

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  pytest.ini  swarm_v2.py
assets/: probes.json  reputation.json
config/: plora.dry.yml  plora.full.yml
experiments/: experiment.py  plasmid_swarm.py  plasmid_swarm_experiment.py  plora.proto  setup_optimization.py
notebooks/: experiment_analysis.ipynb  experiment_analysis_clean.ipynb  math_foundations.ipynb
plora/: __init__.py  agent.py  backdoor.py  compat.py  config.py  dataset_loader.py  gate.py  it_estimators.py  la_utils.py  loader.py  logging_cfg.py  manifest.py  metrics.py  mine.py  notebook_utils.py  peft_safety.py  plotting.py  probes.py  signer.py  stats.py  targets.py  te.py  threshold_sigs.py  weights.py
results/: bounds_validation.json  c_calib_ba.json  c_calib_er.json  c_calib_ws.json  dry-run-summary.md  env_manifest.json  final_assessment_updated.json  history.json  history_seed11.json  net_it_metrics.json  probes_calib.json  summary_v2.json  swarm_v2_report_seed11.json  swarm_v2_report_seed42.json  thesis_sweep.jsonl
scripts/: ablation_runner.py  alternating_train_merge.py  audit_verify.py  build_value_add_jsonl.py  calibrate_c.py  dump_policy.py  evaluate_v2.py  fetch_client.py  merge_plasmids.py  mine_calibrate.py  monolithic_train.py  net_it_metrics.py  offer_server.py  plot_figures.py  preload_datasets.py  probes_calibrate.py  run_lora_value_add.py  save_dissertation_figures.py  show_gossip_results.sh  show_sweep_summary.sh  sign_plasmid.py  sweep.py  (+3 more)
(+75 files in other folders)
