[tool.poetry]
name = "plora-swarm"
version = "0.2.0"
description = "Prototype v2 of Plasmid LoRA Swarm"
authors = ["Plora Team <team@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "plora" }, { include = "swarm" }]

[tool.poetry.dependencies]
python = "^3.11"
torch = "2.3.0"
transformers = "4.42.0"
peft = "0.12.0"
cryptography = "42.0.7"
pydantic = "2.7.1"
sacrebleu = "2.4.0"
grpcio = "*"
grpcio-tools = "*"
pyyaml = "*"
safetensors = "*"
datasets = "^4.0.0"

[tool.poetry.dev-dependencies]
pytest = "8.2.0"
ruff = "0.4.3"
black = "24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

